<resources>
    <string name="app_name">Заметки</string>
    <string name="action_settings">Настройки</string>
    <string name="action_help">Помощь</string>

    <string name="note_add">Добавить заметку</string>

    <string name="settings_view_title">Параметры отображения</string>
    <string name="settings_reminder">Напоминания</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="theme_title">Тема</string>
    <string name="theme_key">settings_theme_key</string>
    <string-array name="theme_list">
        <item>@string/theme_light_name</item>
        <item>@string/theme_dark_name</item>
        <item>@string/theme_default_name</item>
    </string-array>
    <string name="theme_light_name">Светлая</string>
    <string name="theme_dark_name">Темная</string>
    <string name="theme_default_name">По умолчанию</string>

    <string name="reminder_morning_title">утром</string>
    <string name="reminder_morning_hour_key">settings_reminder_morning_hour_key</string>
    <string name="reminder_morning_hour_default_value">9</string>
    <string name="reminder_morning_minute_key">settings_reminder_morning_minute_key</string>
    <string name="reminder_morning_minute_default_value">0</string>

    <string name="reminder_noon_title">днем</string>
    <string name="reminder_noon_hour_key">settings_reminder_noon_hour_key</string>
    <string name="reminder_noon_hour_default_value">14</string>
    <string name="reminder_noon_minute_key">settings_reminder_noon_minute_key</string>
    <string name="reminder_noon_minute_default_value">0</string>

    <string name="reminder_evening">вечером</string>
    <string name="reminder_evening_hour_key">settings_reminder_evening_hour_key</string>
    <string name="reminder_evening_hour_default_value">18</string>
    <string name="reminder_evening_minute_key">settings_reminder_evening_minute_key</string>
    <string name="reminder_evening_minute_default_value">0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item_action_delete">Удалить</string>

    <string name="notes_menu_sort">Сортировка</string>
    <string name="notes_menu_sort_key">notes_menu_sort</string>
    <string name="notes_menu_sort_created_at">Дата добавления</string>
    <string name="notes_menu_sort_created_at_reverse">Дата добавления с конца</string>
    <string name="notes_menu_sort_title">Заголовок</string>
    <string name="notes_menu_sort_title_reverse">Заголовок с конца</string>
    <string name="notes_menu_sort_updated_at">Дата изменения</string>
    <string name="notes_menu_sort_updated_at_reverse">Дата изменения с конца</string>

    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="error_note_get_fail">Неудалось получить заметку</string>
    <string name="error_note_delete_fail">Неудалось удалить заметку</string>

    <string name="note_detail_bottom_action_bar_title">Последнее изменение:</string>
    <string name="item_actions">Действия</string>
    <string name="note_empty_delete">Пустая заметка удалена</string>
    <string name="error_note_save_fail">Неудалось сохранить заметку</string>
    <string name="note_item_title_hint">Заголовок</string>
    <string name="note_item_description_hint">Текст</string>
</resources>